--- a/UnivMobile/res/layout/activity_accueil.xml
+++ b/UnivMobile/res/layout/activity_accueil.xml
@@ -1,21 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:gravity="center" >
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/universitySelected"
-        android:text="Aucune université sélectionée"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    
+        android:layout_height="wrap_content"
+        android:text="Aucune université sélectionée" />
+
     <Button
-        android:layout_marginTop="10dp"
         android:id="@+id/selectUniversity"
-        android:padding="15dp"
-        android:text="Choisir..."
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="15dp"
+        android:text="Choisir..." />
 
 </LinearLayout>
