--- a/UnivMobile/res/layout/activity_apropos.xml
+++ b/UnivMobile/res/layout/activity_apropos.xml
@@ -33,10 +33,38 @@
 
         <TextView
             android:id="@+id/buildName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:singleLine="true"
             android:text="@string/buildDisplayName" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BUILD ID : "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/buildId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:singleLine="true"
+            android:text="@string/buildId" />
     </LinearLayout>
 
 </LinearLayout>
