- Add metadata "jsonURL" - Display "jsonURL" in AProposActivity

--- a/UnivMobile/res/layout/activity_apropos.xml
+++ b/UnivMobile/res/layout/activity_apropos.xml
@@ -15,7 +15,8 @@
             android:id="@+id/gitCommit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:text="@string/gitCommit" />
     </LinearLayout>
 
@@ -35,7 +36,7 @@
             android:id="@+id/buildName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="right"
@@ -59,7 +60,31 @@
             android:id="@+id/buildId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:singleLine="true"
+            android:text="@string/buildId" />
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="URL : "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/urlApiId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="right"
