--- a/UnivMobile/res/layout/activity_accueil.xml
+++ b/UnivMobile/res/layout/activity_accueil.xml
@@ -18,5 +18,13 @@
         android:layout_marginTop="10dp"
         android:padding="15dp"
         android:text="Choisir..." />
+    
+    <Button
+        android:id="@+id/selectGeocampus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:padding="15dp"
+        android:text="Géocampus" />
 
 </LinearLayout>
