--- a/UnivMobile/res/layout/frag_details_university.xml
+++ b/UnivMobile/res/layout/frag_details_university.xml
@@ -14,7 +14,7 @@
         android:paddingTop="2dp" >
 
         <TextView
-            android:id="@+id/textId"
+            android:id="@+id/titleId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -35,6 +35,7 @@
             android:background="@android:color/black" />
 
         <TextView
+            android:id="@+id/phoneLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -62,12 +63,14 @@
             android:textSize="16sp" />
 
         <View
+            android:id="@+id/phoneSep"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_margin="2dp"
             android:background="@android:color/black" />
 
         <TextView
+            android:id="@+id/adressLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -81,7 +84,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/adresseId"
+            android:id="@+id/adressId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -93,6 +96,48 @@
             android:text="ADRESSE"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
+        
+        <View
+            android:id="@+id/adressSep"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/black" />
+        
+        <TextView
+            android:id="@+id/webUrlLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="7dp"
+            android:singleLine="true"
+            android:text="Site internet"
+            android:textColor="#777777"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/webUrlId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="7dp"
+            android:singleLine="true"
+            android:text="blabla"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+        
+        <View
+            android:id="@+id/webUrlSep"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/black" />
 
         <RelativeLayout
             android:layout_width="match_parent"
