--- a/UnivMobile/res/layout/frag_item_university.xml
+++ b/UnivMobile/res/layout/frag_item_university.xml
@@ -26,7 +26,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/adresseId"
+        android:id="@+id/addressId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
