--- a/UnivMobile/res/layout/activity_apropos.xml
+++ b/UnivMobile/res/layout/activity_apropos.xml
@@ -20,6 +20,31 @@
             android:text="@string/gitCommit" />
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VERSION : "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/appVersion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="left"
+            android:singleLine="true"
+            android:text="@string/appVersion" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +64,7 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="right"
+            android:gravity="left"
             android:singleLine="true"
             android:text="@string/buildDisplayName" />
     </LinearLayout>
@@ -63,7 +88,7 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="right"
+            android:gravity="left"
             android:singleLine="true"
             android:text="@string/buildId" />
     </LinearLayout>
@@ -77,7 +102,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="URL : "
+            android:text="JSON : "
             android:textStyle="bold" />
 
         <TextView
@@ -87,9 +112,33 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="right"
+            android:gravity="left"
             android:singleLine="true"
-            android:text="@string/buildId" />
+            android:text="@string/urlApiId" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BASE : "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/jsonBaseURL"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="left"
+            android:singleLine="true"
+            android:text="@string/jsonBaseURL" />
     </LinearLayout>
 
 </LinearLayout>
