--- a/UnivMobile/res/layout/activity_accueil.xml
+++ b/UnivMobile/res/layout/activity_accueil.xml
@@ -5,6 +5,13 @@
     android:gravity="center"
     android:orientation="vertical" >
 
+    <Button
+        android:id="@+id/userTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:padding="10dp" />
+
     <TextView
         android:id="@+id/universitySelected"
         android:layout_width="wrap_content"
@@ -18,7 +25,7 @@
         android:layout_marginTop="10dp"
         android:padding="15dp"
         android:text="Choisir..." />
-    
+
     <Button
         android:id="@+id/selectGeocampus"
         android:layout_width="wrap_content"
