--- a/UnivMobile/res/layout/frag_list_generic.xml
+++ b/UnivMobile/res/layout/frag_list_generic.xml
@@ -17,4 +17,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
+    <TextView
+        android:id="@+id/noData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="5dp"
+        android:visibility="gone" />
+
 </RelativeLayout>
