--- a/UnivMobile/res/anim/slide_in_left.xml
+++ b/UnivMobile/res/anim/slide_in_left.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <objectAnimator
-        android:interpolator="@android:interpolator/decelerate_quint"
-        android:valueFrom="500dp" android:valueTo="0dp"
-        android:valueType="floatType"
-        android:propertyName="translationX"
-        android:duration="500" />
+    <translate android:fromXDelta="100%" android:toXDelta="0%"
+             android:fromYDelta="0%" android:toYDelta="0%"
+             android:duration="400"/>
 </set>
