--- a/UnivMobile/res/layout/fragment_media.xml
+++ b/UnivMobile/res/layout/fragment_media.xml
@@ -30,6 +30,15 @@
 			android:layout_marginTop="-1px"
 			android:layout_below="@id/header_image"/>
 
+		<ProgressBar
+			android:id="@+id/progressBar1"
+			style="?android:attr/progressBarStyleLarge"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/header_image"
+			android:layout_centerInParent="true"
+			android:visibility="visible"/>
+
 	</RelativeLayout>
 
 </ScrollView>
