--- a/UnivMobile/res/layout/view_add_new_poi.xml
+++ b/UnivMobile/res/layout/view_add_new_poi.xml
@@ -125,10 +125,13 @@
 				android:id="@+id/address"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:textSize="@dimen/date_size"
+				android:textSize="@dimen/content_size"
 				android:layout_marginLeft="5dp"
 				android:background="@android:color/white"
-				android:padding="5dp"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:paddingBottom="2dp"
 				android:layout_marginRight="20dp"
 				android:hint="@string/address_hint"
 				android:textColorHint="@color/gray"
@@ -152,10 +155,13 @@
 				android:id="@+id/phone"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:textSize="@dimen/date_size"
+				android:textSize="@dimen/content_size"
 				android:layout_marginLeft="5dp"
 				android:background="@android:color/white"
-				android:padding="5dp"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:paddingBottom="2dp"
 				android:layout_marginRight="20dp"
 				android:hint="@string/phone_hint"
 				android:textColorHint="@color/gray"
@@ -179,10 +185,13 @@
 				android:id="@+id/mail"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:textSize="@dimen/date_size"
+				android:textSize="@dimen/content_size"
 				android:layout_marginLeft="5dp"
 				android:background="@android:color/white"
-				android:padding="5dp"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:paddingBottom="2dp"
 				android:layout_marginRight="20dp"
 				android:hint="@string/email_hint"
 				android:textColorHint="@color/gray"
@@ -222,10 +231,9 @@
 			android:textColor="@color/gray"
 			android:text="@string/select_poi_category"
 			android:layout_centerInParent="true"
-			android:padding="10dp"
+			android:padding="5dp"
 			android:gravity="center"
-			android:lines="2"
-			android:textSize="@dimen/date_size"
+			android:textSize="@dimen/content_size"
 			android:id="@+id/categories_select_text"
 			android:background="@drawable/circle_white"/>
 
