--- a/UnivMobile/res/layout/view_library_list.xml
+++ b/UnivMobile/res/layout/view_library_list.xml
@@ -31,6 +31,7 @@
 		android:layout_marginRight="40dp"
 		android:textColor="@color/purple"
 		android:textSize="@dimen/content_size"
+		android:padding="5dp"
 		android:layout_below="@id/items_container"
 		android:layout_alignParentRight="true"
 		android:drawableRight="@drawable/ic_arrow_purple"
