--- a/UnivMobile/res/layout/view_media_list.xml
+++ b/UnivMobile/res/layout/view_media_list.xml
@@ -23,13 +23,13 @@
 		android:layout_below="@id/media_name"/>
 
 	<TextView
-		android:layout_marginTop="5dp"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:id="@+id/go_to_media_fragment"
 		android:text="@string/go_to_media_main"
 		android:layout_marginRight="40dp"
 		android:textColor="@color/purple"
+		android:padding="5dp"
 		android:textSize="@dimen/content_size"
 		android:layout_below="@id/items_container"
 		android:layout_alignParentRight="true"
