--- a/UnivMobile/res/layout/view_poi_details.xml
+++ b/UnivMobile/res/layout/view_poi_details.xml
@@ -80,8 +80,7 @@
                     android:textSize="7dp"
                     android:textColor="@android:color/white"
                     android:drawableBottom="@drawable/ic_bookmark"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="25dp"
+					android:layout_centerHorizontal="true"
                     android:background="@drawable/box_orange"
                     android:paddingBottom="4dp"
                     android:paddingLeft="4dp"
@@ -195,16 +194,18 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="9">
+                android:layout_weight="9"
+				android:gravity="center">
 
                 <org.unpidf.univmobile.ui.widgets.SqareImageView
-                    android:layout_alignParentRight="true"
+					android:layout_centerInParent="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
                     android:id="@+id/category_image"
-                    android:layout_marginBottom="-7dp"
-                    android:layout_marginTop="-7dp" />
+					android:adjustViewBounds="true"
+					android:scaleType="fitXY"
+					android:layout_marginTop="-7dp"
+					android:layout_marginBottom="-7dp"/>
             </RelativeLayout>
 
             <View
