updated design to look more like iOS

--- a/UnivMobile/res/layout/fragment_university_news.xml
+++ b/UnivMobile/res/layout/fragment_university_news.xml
@@ -1,15 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-	android:background="@android:color/white">
+				xmlns:tools="http://schemas.android.com/tools"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:background="@android:color/white">
+
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/no_results"
+		android:textSize="@dimen/title_size"
+		android:id="@+id/no_data"
+		android:gravity="center_horizontal"
+		android:textColor="@android:color/black"
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp"
+		android:visibility="gone"/>
 
 	<ListView
 		android:id="@+id/list_view"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:paddingLeft="10px"/>
-
 
 	<View
 		android:layout_width="10px"
