--- a/UnivMobile/res/layout/fragment_my_profile.xml
+++ b/UnivMobile/res/layout/fragment_my_profile.xml
@@ -7,7 +7,8 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical">
+		android:orientation="vertical"
+		android:paddingTop="20dp">
 
 		<!-- exo regular -->
 		<TextView
@@ -48,16 +49,12 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/media_list"
-			android:paddingBottom="10dp"
-			android:background="@android:color/white"
 			android:visibility="gone"/>
 
 		<org.unpidf.univmobile.ui.views.LibraryListView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/library_list"
-			android:paddingBottom="10dp"
-			android:background="@android:color/white"
 			android:visibility="gone"/>
 
 		<org.unpidf.univmobile.ui.views.BookmarksListView
