--- a/UnivMobile/res/layout/view_media_list.xml
+++ b/UnivMobile/res/layout/view_media_list.xml
@@ -13,7 +13,8 @@
 		android:textColor="@android:color/white"
 		android:text="@string/my_media"
 		android:paddingLeft="@dimen/horizontal"
-		android:paddingTop="@dimen/horizontal"/>
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
