--- a/UnivMobile/res/layout/fragment_notifications.xml
+++ b/UnivMobile/res/layout/fragment_notifications.xml
@@ -1,52 +1,53 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:orientation="vertical"
-             android:layout_height="match_parent"
-             tools:context="org.unpidf.univmobile.ui.fragments.NotificationsFragment"
-             android:background="@drawable/main_background"
-             android:paddingRight="20dp"
-             android:paddingLeft="20dp"
-             android:paddingTop="10dp">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+											  android:id="@+id/swipe_container"
+											  android:layout_width="match_parent"
+											  android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/notifications"
-        android:textSize="@dimen/title_size"
-		android:id="@+id/title"
-        android:textColor="@android:color/white"
-		android:paddingTop="10dp"
-		android:paddingBottom="10dp" />
+	<LinearLayout  android:layout_width="match_parent"
+				  android:orientation="vertical"
+				  android:layout_height="match_parent"
+				  android:background="@drawable/main_background"
+				  android:paddingRight="20dp"
+				  android:paddingLeft="20dp"
+				  android:paddingTop="10dp">
 
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/no_results"
-		android:textSize="@dimen/title_size"
-		android:id="@+id/no_data"
-		android:gravity="center_horizontal"
-		android:textColor="@android:color/white"
-		android:paddingTop="10dp"
-		android:paddingBottom="10dp"
-		android:visibility="gone"/>
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/notifications"
+			android:textSize="@dimen/title_size"
+			android:id="@+id/title"
+			android:textColor="@android:color/white"
+			android:paddingTop="10dp"
+			android:paddingBottom="10dp"/>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/listView"
-        android:paddingBottom="10dp"
-		android:visibility="gone"/>
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/no_results"
+			android:textSize="@dimen/title_size"
+			android:id="@+id/no_data"
+			android:gravity="center_horizontal"
+			android:textColor="@android:color/white"
+			android:paddingTop="10dp"
+			android:paddingBottom="10dp"
+			android:visibility="gone"/>
 
+		<ListView
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/listView"
+			android:paddingBottom="10dp"
+			android:visibility="gone"/>
 
-	<ProgressBar
-		android:id="@+id/progressBar1"
-		style="?android:attr/progressBarStyleLarge"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal"
-		android:visibility="visible"/>
+		<ProgressBar
+			android:id="@+id/progressBar1"
+			style="?android:attr/progressBarStyleLarge"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:visibility="visible"/>
 
+	</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
 
-
-</LinearLayout>
