--- a/UnivMobile/res/layout/view_action_bar.xml
+++ b/UnivMobile/res/layout/view_action_bar.xml
@@ -63,7 +63,7 @@
 			android:id="@+id/login_container"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_weight="10"
+			android:layout_weight="4"
 			android:orientation="vertical"
 			android:gravity="center_vertical|right"
 			android:visibility="gone">
@@ -98,7 +98,8 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="4"
 			android:orientation="vertical"
-			android:gravity="center_vertical">
+			android:gravity="center_vertical"
+			android:id="@+id/university_container">
 
 			<TextView
 				android:id="@+id/university_name"
