--- a/UnivMobile/res/layout/fragment_university_news.xml
+++ b/UnivMobile/res/layout/fragment_university_news.xml
@@ -1,7 +1,8 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
 											  android:id="@+id/swipe_container"
 											  android:layout_width="match_parent"
-											  android:layout_height="match_parent">
+											  android:layout_height="match_parent"
+											  android:background="@android:color/white">
 
 	<ListView
 		android:id="@+id/list_view"
