--- a/UnivMobile/res/layout/view_add_new_poi.xml
+++ b/UnivMobile/res/layout/view_add_new_poi.xml
@@ -144,6 +144,38 @@
 			android:layout_height="wrap_content"
 			android:gravity="center_vertical"
 			android:layout_marginLeft="110dp"
+			android:paddingTop="5dp"
+			android:paddingBottom="5dp">
+
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_pin"/>
+
+			<EditText
+				android:id="@+id/city"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textSize="@dimen/content_size"
+				android:layout_marginLeft="5dp"
+				android:background="@android:color/white"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:paddingBottom="2dp"
+				android:layout_marginRight="20dp"
+				android:hint="@string/city_hint"
+				android:textColorHint="@color/gray"
+				android:textColor="@color/gray"/>
+
+		</LinearLayout>
+
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center_vertical"
+			android:layout_marginLeft="110dp"
 			android:paddingBottom="5dp">
 
 			<ImageView
